jitsu/jitsu-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jitsu
  namespace: #namespace_name#
spec:
  selector:
    matchLabels:
      app: jitsu
  template:
    metadata:
      labels:
        app: jitsu
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: jitsu
          image: jitsucom/jitsu:1.43.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              name: api
