jitsu/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-server
  namespace: #namespace_name#
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-server
  template:
    metadata:
      labels:
        app: redis-server
        name: redis-server
    spec:
      containers:
        - name: redis-server
          image: redis:latest
          args: ["--appendonly", "yes"]
          ports:
            - name: redis-server
              containerPort: 6379
          volumeMounts:
            - name: lv-storage
              mountPath: /data
      volumes:
        - name: lv-storage
          persistentVolumeClaim:
            claimName: redis-pvc
