jitsu/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-server
  namespace: #namespace_name#
spec:
  selector:
    app: redis-server
  type: LoadBalancer
  ports:
    - name: redis-port
      protocol: TCP
      port: 6379
      targetPort: 6379
